Completed first draft of About pbout page—added content, still need to style.

--- a/sass/_synbiota.scss
+++ b/sass/_synbiota.scss
@@ -8,6 +8,10 @@ body {
         }
 
     }
+
+    p.p-highlight {
+        font-family: 'Open Sans Condensed', sans-serif;
+    }
     
     .navbar,
     .navbar-default .navbar-brand,
