--- a/sass/_synbiota.scss
+++ b/sass/_synbiota.scss
@@ -11,6 +11,8 @@ body {
 
     p.p-highlight {
         font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 30px;
+        line-heigh: 1.25;
     }
     
     .navbar,
