--- a/sass/_synbiota.scss
+++ b/sass/_synbiota.scss
@@ -47,6 +47,18 @@ body {
             border-radius: 0;
         }
     }
+
+    .page-header-icon {
+        img {
+            margin-right: 20px;
+        }
+
+        h2 {
+            font-size: 25px;
+            margin-top: 23px;
+            margin-bottom: 15px;
+        }
+    }
     
     .jumbotron.dark-purple {
     	background-color: #262262
@@ -137,6 +149,17 @@ body {
         }
         .bottom-bar ul li:first-of-type > a {
         	padding-left: 0;
+        }
+    }
+
+    .platform-bubbles {
+        h3 {
+              display: inline-block;
+              border: 2px solid #25AAE1;
+              padding: 63px 0;
+              height: 150px;
+              width: 150px;
+              border-radius: 50%;
         }
     }
     
