--- a/css/bootstrap_conf.css
+++ b/css/bootstrap_conf.css
@@ -2,22 +2,28 @@
 body {
   padding-top: 70px;
 }
-/* line 3, ../sass/_synbiota.scss */
+/* line 4, ../sass/_synbiota.scss */
 body a {
   color: #25AAE1;
   font-weight: bold;
 }
-/* line 6, ../sass/_synbiota.scss */
+/* line 7, ../sass/_synbiota.scss */
 body a :hover {
   color: #1A8BB9;
 }
-/* line 12, ../sass/_synbiota.scss */
+/* line 13, ../sass/_synbiota.scss */
 body p.p-highlight {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 30px;
   line-heigh: 1.25;
 }
-/* line 18, ../sass/_synbiota.scss */
+/* line 19, ../sass/_synbiota.scss */
+body .row-border {
+  border: 2px solid #333;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+/* line 25, ../sass/_synbiota.scss */
 body .navbar,
 body .navbar-default .navbar-brand,
 body .navbar-default .navbar-nav > li > a,
@@ -26,82 +32,82 @@ body .navbar .name h1 a, body .navbar .name h2 a, body .navbar .name h3 a, body 
   background: white !important;
   color: #222 !important;
 }
-/* line 25, ../sass/_synbiota.scss */
+/* line 32, ../sass/_synbiota.scss */
 body .navbar .navbar-brand,
 body .navbar-default .navbar-brand .navbar-brand,
 body .navbar-default .navbar-nav > li > a .navbar-brand,
 body .navbar .name h1 a .navbar-brand, body .navbar .name h2 a .navbar-brand, body .navbar .name h3 a .navbar-brand, body .navbar .name h4 a .navbar-brand, body .navbar .name p a .navbar-brand, body .navbar .name span a .navbar-brand {
   font-weight: bold;
 }
-/* line 30, ../sass/_synbiota.scss */
+/* line 37, ../sass/_synbiota.scss */
 body ul.nav.navbar-nav li a {
   text-transform: uppercase;
 }
-/* line 34, ../sass/_synbiota.scss */
+/* line 41, ../sass/_synbiota.scss */
 body .navbar-default {
   box-shadow: none;
   border-bottom: none;
 }
-/* line 40, ../sass/_synbiota.scss */
+/* line 47, ../sass/_synbiota.scss */
 body .jumbotron {
   margin-top: 30px;
   color: #FFF;
 }
-/* line 46, ../sass/_synbiota.scss */
+/* line 53, ../sass/_synbiota.scss */
 body .container .jumbotron, body .container-fluid .jumbotron {
   border-radius: 0;
 }
-/* line 52, ../sass/_synbiota.scss */
+/* line 59, ../sass/_synbiota.scss */
 body .page-header-icon img {
   margin-right: 20px;
 }
-/* line 56, ../sass/_synbiota.scss */
+/* line 63, ../sass/_synbiota.scss */
 body .page-header-icon h2 {
   font-size: 25px;
   margin-top: 23px;
   margin-bottom: 15px;
 }
-/* line 63, ../sass/_synbiota.scss */
+/* line 70, ../sass/_synbiota.scss */
 body .jumbotron.dark-purple {
   background-color: #262262;
 }
-/* line 67, ../sass/_synbiota.scss */
+/* line 74, ../sass/_synbiota.scss */
 body .jumbotron-group {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 73, ../sass/_synbiota.scss */
+/* line 80, ../sass/_synbiota.scss */
 body .jumbotron-group .purple {
   background-color: #60297C;
 }
-/* line 76, ../sass/_synbiota.scss */
+/* line 83, ../sass/_synbiota.scss */
 body .jumbotron-group .pink {
   background-color: #EB1979;
 }
-/* line 79, ../sass/_synbiota.scss */
+/* line 86, ../sass/_synbiota.scss */
 body .jumbotron-group .light-blue {
   background-color: #25AAE1;
 }
-/* line 82, ../sass/_synbiota.scss */
+/* line 89, ../sass/_synbiota.scss */
 body .jumbotron-group .fern {
   background-color: #62BD83;
 }
-/* line 85, ../sass/_synbiota.scss */
+/* line 92, ../sass/_synbiota.scss */
 body .jumbotron-group .green {
   background-color: #22AE50;
 }
-/* line 88, ../sass/_synbiota.scss */
+/* line 95, ../sass/_synbiota.scss */
 body .jumbotron-group .jumbotron {
   margin-top: 0;
   margin-bottom: 0;
   background-color: inherit;
 }
-/* line 96, ../sass/_synbiota.scss */
+/* line 103, ../sass/_synbiota.scss */
 body .jumbotron .intro {
   font-family: 'Open Sans Condensed', sans-serif;
   line-height: 1.25;
 }
-/* line 101, ../sass/_synbiota.scss */
+/* line 108, ../sass/_synbiota.scss */
 body .jumbotron.footer {
   background: #222;
   color: #fff;
@@ -109,45 +115,45 @@ body .jumbotron.footer {
   margin-bottom: 0;
   border: none;
 }
-/* line 107, ../sass/_synbiota.scss */
+/* line 114, ../sass/_synbiota.scss */
 body .jumbotron.footer .row {
   max-width: 100%;
 }
-/* line 111, ../sass/_synbiota.scss */
+/* line 118, ../sass/_synbiota.scss */
 body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
   color: #fefefe;
 }
-/* line 114, ../sass/_synbiota.scss */
+/* line 121, ../sass/_synbiota.scss */
 body .jumbotron.footer h5, body .jumbotron.footer h6 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-/* line 118, ../sass/_synbiota.scss */
+/* line 125, ../sass/_synbiota.scss */
 body .jumbotron.footer ul {
   margin-left: 0;
   padding: 0;
 }
-/* line 121, ../sass/_synbiota.scss */
+/* line 128, ../sass/_synbiota.scss */
 body .jumbotron.footer ul li {
   list-style-type: none;
 }
-/* line 125, ../sass/_synbiota.scss */
+/* line 132, ../sass/_synbiota.scss */
 body .jumbotron.footer p {
   font-size: 14px;
 }
-/* line 131, ../sass/_synbiota.scss */
+/* line 138, ../sass/_synbiota.scss */
 body .navbar-footer .bottom-bar ul {
   display: inline-block;
 }
-/* line 134, ../sass/_synbiota.scss */
+/* line 141, ../sass/_synbiota.scss */
 body .navbar-footer .bottom-bar ul li {
   float: left;
 }
-/* line 137, ../sass/_synbiota.scss */
+/* line 144, ../sass/_synbiota.scss */
 body .navbar-footer .bottom-bar ul li > a {
   width: 100%;
 }
-/* line 140, ../sass/_synbiota.scss */
+/* line 147, ../sass/_synbiota.scss */
 body .navbar-footer .bottom-bar ul li > a,
 body .navbar-footer .bottom-bar p {
   display: block;
@@ -158,11 +164,11 @@ body .navbar-footer .bottom-bar p {
   font-weight: normal;
   text-transform: none;
 }
-/* line 150, ../sass/_synbiota.scss */
+/* line 157, ../sass/_synbiota.scss */
 body .navbar-footer .bottom-bar ul li:first-of-type > a {
   padding-left: 0;
 }
-/* line 156, ../sass/_synbiota.scss */
+/* line 163, ../sass/_synbiota.scss */
 body .platform-bubbles h3 {
   display: inline-block;
   border: 2px solid #25AAE1;
@@ -171,24 +177,24 @@ body .platform-bubbles h3 {
   width: 150px;
   border-radius: 50%;
 }
-/* line 168, ../sass/_synbiota.scss */
+/* line 175, ../sass/_synbiota.scss */
 body #myModal .modal-header {
   border-bottom: none;
 }
-/* line 171, ../sass/_synbiota.scss */
+/* line 178, ../sass/_synbiota.scss */
 body #myModal .btn-wide {
   padding: 6px 24px;
 }
-/* line 174, ../sass/_synbiota.scss */
+/* line 181, ../sass/_synbiota.scss */
 body #myModal .modal-title {
   text-transform: uppercase;
 }
-/* line 177, ../sass/_synbiota.scss */
+/* line 184, ../sass/_synbiota.scss */
 body #myModal .modal-content {
   padding: 24px;
   border-radius: 0;
 }
-/* line 182, ../sass/_synbiota.scss */
+/* line 189, ../sass/_synbiota.scss */
 body #myModal input {
   margin: 24px 0;
 }
