--- a/sass/_synbiota.scss
+++ b/sass/_synbiota.scss
@@ -1,5 +1,6 @@
 body {
 	padding-top: 70px;
+
     a {
     	color: #25AAE1;
     	font-weight: bold;
@@ -13,6 +14,12 @@ body {
         font-family: 'Open Sans Condensed', sans-serif;
         font-size: 30px;
         line-heigh: 1.25;
+    }
+
+    .row-border {
+        border: 2px solid #333;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
     
     .navbar,
