--- a/sass/_synbiota.scss
+++ b/sass/_synbiota.scss
@@ -10,6 +10,10 @@ body {
 
     }
 
+    h2 {
+        font-family: 'Open Sans Condensed', sans-serif;
+    }
+
     p.p-highlight {
         font-family: 'Open Sans Condensed', sans-serif;
         font-size: 30px;
@@ -37,10 +41,36 @@ body {
     ul.nav.navbar-nav li a {
     	text-transform: uppercase;
     }
+
+    ul.no-list-style {
+            margin-left: 0;
+            padding: 0;
+            li {
+                list-style-type: none;
+            }
+        }
     
     .navbar-default {
     	box-shadow: none;
     	border-bottom: none;
+    }
+
+    .row-glossary {
+        margin-top: 20px;
+
+        h1, h2, h3, h4, h5, h6 {
+            margin-top: 0;
+            margin-bottom: 0;
+            line-height: 1;
+        }
+
+        h3 {
+            font-size: 48px;
+        }
+
+        img {
+            margin-top: 8px;
+        }
     }
     
     //* Jumbotron */
@@ -122,13 +152,7 @@ body {
         	text-transform: uppercase;
         	letter-spacing: 1px;
         }
-        ul {
-        	margin-left: 0;
-        	padding: 0;
-        	li {
-        	    list-style-type: none;
-            }
-        }
+        
         p {
         	font-size: 14px;
         }
@@ -169,7 +193,23 @@ body {
               border-radius: 50%;
         }
     }
-    
+
+    .purple {
+        color: #60297C;
+    }
+    .pink {
+        color: #EB1979;
+    }
+    .light-blue {
+        color: #25AAE1;
+    }
+    .fern {
+        color: #62BD83;
+    }
+    .green {
+        color: #22AE50;
+    }
+
     //Modal 
     #myModal {
         .modal-header {
@@ -191,4 +231,53 @@ body {
         }
     }
 
+    .circles{
+        margin:0px auto;
+    }
+    .circles > div {
+        overflow:hidden;
+        float:left;
+        width:auto;
+        height:auto;
+        position: relative;
+        border-radius:50%;
+        -moz-border-radius:50%;
+        -webkit-border-radius:50%;
+        -khtml-border-radius: 50%;
+        background:#eee;
+    }
+
+    .circles > div > div {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+    .circles > div > div > div {
+        display: table;
+        width: 100%;
+        height: 100%;
+    }
+    .circles > div > div > div > div {
+        display: table-cell;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    @media (max-width: 320px)
+    {
+        .circles > div {padding: 50%;}
+    }
+
+    @media (min-width: 321px) and (max-width: 800px)
+    {
+        .circles > div {padding: 25%;}
+    }
+
+    @media (min-width: 801px)
+    {
+        .circles{width:800px}
+        .circles > div {padding: 12.5%;}
+    }
 }
