--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -49,6 +49,9 @@ $ui-lightblue:    #edf6fb;
 $ui-secondary1:   #FF993F;
 $ui-secondary2:   #5700BF;
 
+$ui-purple:       #252161;
+$ui-purple-dark:  #252161;
+
 $ui-grey-light:   #eff0f0;
 $ui-grey:         #626871;
 $ui-grey-dark:    #4b5056;
