--- a/css/bootstrap_conf.css
+++ b/css/bootstrap_conf.css
@@ -34,58 +34,59 @@ body a :hover {
   color: #1A8BB9;
 }
 /* line 14, ../sass/_base.scss */
-body h2 {
+body .condensed {
   font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 200;
 }
-/* line 18, ../sass/_base.scss */
+/* line 19, ../sass/_base.scss */
 body p.p-highlight {
   font-size: 30px;
   line-heigh: 1.25;
 }
-/* line 23, ../sass/_base.scss */
+/* line 24, ../sass/_base.scss */
 body .border {
   border: 2px solid #333;
   padding: 25px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
-/* line 30, ../sass/_base.scss */
+/* line 31, ../sass/_base.scss */
 body .purple-bg {
   background-color: #252161;
 }
-/* line 33, ../sass/_base.scss */
+/* line 34, ../sass/_base.scss */
 body .purple-dark-bg {
   background-color: #252161;
 }
-/* line 36, ../sass/_base.scss */
+/* line 37, ../sass/_base.scss */
 body .pink-bg {
   background-color: #da4a89;
 }
-/* line 39, ../sass/_base.scss */
+/* line 40, ../sass/_base.scss */
 body .blue-bg {
   background-color: #2FAADB;
 }
-/* line 42, ../sass/_base.scss */
+/* line 43, ../sass/_base.scss */
 body .green-bg {
   background-color: #5fbc9b;
 }
-/* line 46, ../sass/_base.scss */
+/* line 47, ../sass/_base.scss */
 body .purple {
   color: #252161;
 }
-/* line 49, ../sass/_base.scss */
+/* line 50, ../sass/_base.scss */
 body .pink {
   color: #da4a89;
 }
-/* line 52, ../sass/_base.scss */
+/* line 53, ../sass/_base.scss */
 body .blue {
   color: #2FAADB;
 }
-/* line 55, ../sass/_base.scss */
+/* line 56, ../sass/_base.scss */
 body .green {
   color: #5fbc9b;
 }
-/* line 59, ../sass/_base.scss */
+/* line 60, ../sass/_base.scss */
 body .navbar,
 body .navbar-default .navbar-brand,
 body .navbar-default .navbar-nav > li > a,
@@ -94,102 +95,102 @@ body .navbar .name h1 a, body .navbar .name h2 a, body .navbar .name h3 a, body 
   background: white !important;
   color: #222 !important;
 }
-/* line 66, ../sass/_base.scss */
+/* line 67, ../sass/_base.scss */
 body .navbar .navbar-brand,
 body .navbar-default .navbar-brand .navbar-brand,
 body .navbar-default .navbar-nav > li > a .navbar-brand,
 body .navbar .name h1 a .navbar-brand, body .navbar .name h2 a .navbar-brand, body .navbar .name h3 a .navbar-brand, body .navbar .name h4 a .navbar-brand, body .navbar .name p a .navbar-brand, body .navbar .name span a .navbar-brand {
   font-weight: bold;
 }
-/* line 71, ../sass/_base.scss */
+/* line 72, ../sass/_base.scss */
 body ul.nav.navbar-nav li a {
   text-transform: uppercase;
 }
-/* line 75, ../sass/_base.scss */
+/* line 76, ../sass/_base.scss */
 body ul.no-list-style {
   margin-left: 0;
   padding: 0;
 }
-/* line 78, ../sass/_base.scss */
+/* line 79, ../sass/_base.scss */
 body ul.no-list-style li {
   list-style-type: none;
 }
-/* line 83, ../sass/_base.scss */
+/* line 84, ../sass/_base.scss */
 body .navbar-default {
   box-shadow: none;
   border-bottom: none;
 }
-/* line 88, ../sass/_base.scss */
+/* line 89, ../sass/_base.scss */
 body .btn-primary,
 body .btn-primary:focus {
   background: #da4a89;
   border-color: #ce367c;
 }
-/* line 94, ../sass/_base.scss */
+/* line 95, ../sass/_base.scss */
 body .btn-primary:hover {
   background: #ce367c;
   border-color: #ce367c;
 }
-/* line 99, ../sass/_base.scss */
+/* line 100, ../sass/_base.scss */
 body .row-glossary {
   margin-top: 20px;
 }
-/* line 102, ../sass/_base.scss */
+/* line 103, ../sass/_base.scss */
 body .row-glossary h1, body .row-glossary h2, body .row-glossary h3, body .row-glossary h4, body .row-glossary h5, body .row-glossary h6 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1;
 }
-/* line 108, ../sass/_base.scss */
+/* line 109, ../sass/_base.scss */
 body .row-glossary h3 {
   font-size: 48px;
 }
-/* line 112, ../sass/_base.scss */
+/* line 113, ../sass/_base.scss */
 body .row-glossary img {
   margin-top: 8px;
 }
-/* line 117, ../sass/_base.scss */
+/* line 118, ../sass/_base.scss */
 body h5, body h6 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-/* line 123, ../sass/_base.scss */
+/* line 124, ../sass/_base.scss */
 body .jumbotron {
   margin-top: 30px;
   color: #FFF;
 }
-/* line 126, ../sass/_base.scss */
+/* line 127, ../sass/_base.scss */
 body .jumbotron p {
   font-size: 14px;
 }
-/* line 132, ../sass/_base.scss */
+/* line 133, ../sass/_base.scss */
 body .container .jumbotron, body .container-fluid .jumbotron {
   border-radius: 0;
 }
-/* line 138, ../sass/_base.scss */
+/* line 139, ../sass/_base.scss */
 body .page-header-icon img {
   margin-right: 20px;
 }
-/* line 142, ../sass/_base.scss */
+/* line 143, ../sass/_base.scss */
 body .page-header-icon h2 {
   font-size: 25px;
   margin-top: 23px;
   margin-bottom: 15px;
 }
-/* line 149, ../sass/_base.scss */
+/* line 150, ../sass/_base.scss */
 body .jumbotron.dark-purple {
   background-color: #262262;
 }
-/* line 153, ../sass/_base.scss */
+/* line 154, ../sass/_base.scss */
 body .jumbotron-group {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 158, ../sass/_base.scss */
+/* line 159, ../sass/_base.scss */
 body .jumbotron .intro {
   line-height: 1.25;
 }
-/* line 162, ../sass/_base.scss */
+/* line 163, ../sass/_base.scss */
 body .jumbotron.footer {
   background: #222;
   color: #fff;
@@ -197,31 +198,31 @@ body .jumbotron.footer {
   margin-bottom: 0;
   border: none;
 }
-/* line 168, ../sass/_base.scss */
+/* line 169, ../sass/_base.scss */
 body .jumbotron.footer .row {
   max-width: 100%;
 }
-/* line 172, ../sass/_base.scss */
+/* line 173, ../sass/_base.scss */
 body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
   color: #fefefe;
 }
-/* line 176, ../sass/_base.scss */
+/* line 177, ../sass/_base.scss */
 body .jumbotron.footer p {
   font-size: 14px;
 }
-/* line 182, ../sass/_base.scss */
+/* line 183, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul {
   display: inline-block;
 }
-/* line 185, ../sass/_base.scss */
+/* line 186, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li {
   float: left;
 }
-/* line 188, ../sass/_base.scss */
+/* line 189, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a {
   width: 100%;
 }
-/* line 191, ../sass/_base.scss */
+/* line 192, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a,
 body .navbar-footer .bottom-bar p {
   display: block;
@@ -231,11 +232,11 @@ body .navbar-footer .bottom-bar p {
   font-weight: normal;
   text-transform: none;
 }
-/* line 200, ../sass/_base.scss */
+/* line 201, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li:first-of-type > a {
   padding-left: 0;
 }
-/* line 206, ../sass/_base.scss */
+/* line 207, ../sass/_base.scss */
 body .platform-bubbles h3 {
   display: inline-block;
   border: 2px solid #25AAE1;
@@ -244,52 +245,52 @@ body .platform-bubbles h3 {
   width: 150px;
   border-radius: 50%;
 }
-/* line 216, ../sass/_base.scss */
+/* line 217, ../sass/_base.scss */
 body .purple {
   color: #60297C;
 }
-/* line 219, ../sass/_base.scss */
+/* line 220, ../sass/_base.scss */
 body .pink {
   color: #EB1979;
 }
-/* line 222, ../sass/_base.scss */
+/* line 223, ../sass/_base.scss */
 body .light-blue {
   color: #25AAE1;
 }
-/* line 225, ../sass/_base.scss */
+/* line 226, ../sass/_base.scss */
 body .fern {
   color: #62BD83;
 }
-/* line 228, ../sass/_base.scss */
+/* line 229, ../sass/_base.scss */
 body .green {
   color: #22AE50;
 }
-/* line 234, ../sass/_base.scss */
+/* line 235, ../sass/_base.scss */
 body #myModal .modal-header {
   border-bottom: none;
 }
-/* line 237, ../sass/_base.scss */
+/* line 238, ../sass/_base.scss */
 body #myModal .btn-wide {
   padding: 6px 24px;
 }
-/* line 240, ../sass/_base.scss */
+/* line 241, ../sass/_base.scss */
 body #myModal .modal-title {
   text-transform: uppercase;
 }
-/* line 243, ../sass/_base.scss */
+/* line 244, ../sass/_base.scss */
 body #myModal .modal-content {
   padding: 24px;
   border-radius: 0;
 }
-/* line 248, ../sass/_base.scss */
+/* line 249, ../sass/_base.scss */
 body #myModal input {
   margin: 24px 0;
 }
-/* line 253, ../sass/_base.scss */
+/* line 254, ../sass/_base.scss */
 body .circles {
   margin: 0px auto;
 }
-/* line 256, ../sass/_base.scss */
+/* line 257, ../sass/_base.scss */
 body .circles > div {
   overflow: hidden;
   float: left;
@@ -302,7 +303,7 @@ body .circles > div {
   -khtml-border-radius: 50%;
   background: #eee;
 }
-/* line 269, ../sass/_base.scss */
+/* line 270, ../sass/_base.scss */
 body .circles > div > div {
   position: absolute;
   top: 0;
@@ -310,36 +311,36 @@ body .circles > div > div {
   bottom: 0;
   left: 0;
 }
-/* line 276, ../sass/_base.scss */
+/* line 277, ../sass/_base.scss */
 body .circles > div > div > div {
   display: table;
   width: 100%;
   height: 100%;
 }
-/* line 281, ../sass/_base.scss */
+/* line 282, ../sass/_base.scss */
 body .circles > div > div > div > div {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 @media (max-width: 320px) {
-  /* line 289, ../sass/_base.scss */
+  /* line 290, ../sass/_base.scss */
   body .circles > div {
     padding: 50%;
   }
 }
 @media (min-width: 321px) and (max-width: 800px) {
-  /* line 294, ../sass/_base.scss */
+  /* line 295, ../sass/_base.scss */
   body .circles > div {
     padding: 25%;
   }
 }
 @media (min-width: 801px) {
-  /* line 299, ../sass/_base.scss */
+  /* line 300, ../sass/_base.scss */
   body .circles {
     width: 800px;
   }
-  /* line 300, ../sass/_base.scss */
+  /* line 301, ../sass/_base.scss */
   body .circles > div {
     padding: 12.5%;
   }
@@ -350,299 +351,4 @@ body .disable-margin-padding {
   margin: 0;
   padding: 0;
   padding-bottom: 3px;
-}
-
-/* line 1, ../sass/_standard.scss */
-body {
-  padding-top: 70px;
-}
-/* line 4, ../sass/_standard.scss */
-body a {
-  color: #25AAE1;
-  font-weight: bold;
-}
-/* line 7, ../sass/_standard.scss */
-body a :hover {
-  color: #1A8BB9;
-}
-/* line 13, ../sass/_standard.scss */
-body p.p-highlight {
-  font-size: 30px;
-  line-heigh: 1.25;
-}
-/* line 18, ../sass/_standard.scss */
-body .row-border {
-  border: 2px solid #333;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-/* line 24, ../sass/_standard.scss */
-body .navbar,
-body .navbar-default .navbar-brand,
-body .navbar-default .navbar-nav > li > a,
-body .navbar .name h1 a, body .navbar .name h2 a, body .navbar .name h3 a, body .navbar .name h4 a, body .navbar .name p a, body .navbar .name span a {
-  background-color: white !important;
-  background: white !important;
-  color: #222 !important;
-}
-/* line 31, ../sass/_standard.scss */
-body .navbar .navbar-brand,
-body .navbar-default .navbar-brand .navbar-brand,
-body .navbar-default .navbar-nav > li > a .navbar-brand,
-body .navbar .name h1 a .navbar-brand, body .navbar .name h2 a .navbar-brand, body .navbar .name h3 a .navbar-brand, body .navbar .name h4 a .navbar-brand, body .navbar .name p a .navbar-brand, body .navbar .name span a .navbar-brand {
-  font-weight: bold;
-}
-/* line 36, ../sass/_standard.scss */
-body ul.nav.navbar-nav li a {
-  text-transform: uppercase;
-}
-/* line 40, ../sass/_standard.scss */
-body ul.no-list-style {
-  margin-left: 0;
-  padding: 0;
-}
-/* line 43, ../sass/_standard.scss */
-body ul.no-list-style li {
-  list-style-type: none;
-}
-/* line 48, ../sass/_standard.scss */
-body .navbar-default {
-  box-shadow: none;
-  border-bottom: none;
-}
-/* line 53, ../sass/_standard.scss */
-body .row-glossary {
-  margin-top: 20px;
-}
-/* line 56, ../sass/_standard.scss */
-body .row-glossary h1, body .row-glossary h2, body .row-glossary h3, body .row-glossary h4, body .row-glossary h5, body .row-glossary h6 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 1;
-}
-/* line 62, ../sass/_standard.scss */
-body .row-glossary h3 {
-  font-size: 48px;
-}
-/* line 66, ../sass/_standard.scss */
-body .row-glossary img {
-  margin-top: 8px;
-}
-/* line 72, ../sass/_standard.scss */
-body .jumbotron {
-  margin-top: 30px;
-  color: #FFF;
-}
-/* line 78, ../sass/_standard.scss */
-body .container .jumbotron, body .container-fluid .jumbotron {
-  border-radius: 0;
-}
-/* line 84, ../sass/_standard.scss */
-body .page-header-icon img {
-  margin-right: 20px;
-}
-/* line 88, ../sass/_standard.scss */
-body .page-header-icon h2 {
-  font-size: 25px;
-  margin-top: 23px;
-  margin-bottom: 15px;
-}
-/* line 95, ../sass/_standard.scss */
-body .jumbotron.dark-purple {
-  background-color: #262262;
-}
-/* line 99, ../sass/_standard.scss */
-body .jumbotron-group {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-/* line 105, ../sass/_standard.scss */
-body .jumbotron-group .purple {
-  background-color: #60297C;
-}
-/* line 108, ../sass/_standard.scss */
-body .jumbotron-group .pink {
-  background-color: #EB1979;
-}
-/* line 111, ../sass/_standard.scss */
-body .jumbotron-group .light-blue {
-  background-color: #25AAE1;
-}
-/* line 114, ../sass/_standard.scss */
-body .jumbotron-group .fern {
-  background-color: #62BD83;
-}
-/* line 117, ../sass/_standard.scss */
-body .jumbotron-group .green {
-  background-color: #22AE50;
-}
-/* line 120, ../sass/_standard.scss */
-body .jumbotron-group .jumbotron {
-  margin-top: 0;
-  margin-bottom: 0;
-  background-color: inherit;
-}
-/* line 128, ../sass/_standard.scss */
-body .jumbotron .intro {
-  line-height: 1.25;
-}
-/* line 132, ../sass/_standard.scss */
-body .jumbotron.footer {
-  background: #222;
-  color: #fff;
-  margin-top: 30px;
-  margin-bottom: 0;
-  border: none;
-}
-/* line 138, ../sass/_standard.scss */
-body .jumbotron.footer .row {
-  max-width: 100%;
-}
-/* line 142, ../sass/_standard.scss */
-body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
-  color: #fefefe;
-}
-/* line 145, ../sass/_standard.scss */
-body .jumbotron.footer h5, body .jumbotron.footer h6 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-/* line 150, ../sass/_standard.scss */
-body .jumbotron.footer p {
-  font-size: 14px;
-}
-/* line 156, ../sass/_standard.scss */
-body .navbar-footer .bottom-bar ul {
-  display: inline-block;
-}
-/* line 159, ../sass/_standard.scss */
-body .navbar-footer .bottom-bar ul li {
-  float: left;
-}
-/* line 162, ../sass/_standard.scss */
-body .navbar-footer .bottom-bar ul li > a {
-  width: 100%;
-}
-/* line 165, ../sass/_standard.scss */
-body .navbar-footer .bottom-bar ul li > a,
-body .navbar-footer .bottom-bar p {
-  display: block;
-  color: #FFFFFF;
-  padding: 12px 0 12px 0;
-  padding-left: 15px;
-  font-weight: normal;
-  text-transform: none;
-}
-/* line 174, ../sass/_standard.scss */
-body .navbar-footer .bottom-bar ul li:first-of-type > a {
-  padding-left: 0;
-}
-/* line 180, ../sass/_standard.scss */
-body .platform-bubbles h3 {
-  display: inline-block;
-  border: 2px solid #25AAE1;
-  padding: 63px 0;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-}
-/* line 190, ../sass/_standard.scss */
-body .purple {
-  color: #60297C;
-}
-/* line 193, ../sass/_standard.scss */
-body .pink {
-  color: #EB1979;
-}
-/* line 196, ../sass/_standard.scss */
-body .light-blue {
-  color: #25AAE1;
-}
-/* line 199, ../sass/_standard.scss */
-body .fern {
-  color: #62BD83;
-}
-/* line 202, ../sass/_standard.scss */
-body .green {
-  color: #22AE50;
-}
-/* line 208, ../sass/_standard.scss */
-body #myModal .modal-header {
-  border-bottom: none;
-}
-/* line 211, ../sass/_standard.scss */
-body #myModal .btn-wide {
-  padding: 6px 24px;
-}
-/* line 214, ../sass/_standard.scss */
-body #myModal .modal-title {
-  text-transform: uppercase;
-}
-/* line 217, ../sass/_standard.scss */
-body #myModal .modal-content {
-  padding: 24px;
-  border-radius: 0;
-}
-/* line 222, ../sass/_standard.scss */
-body #myModal input {
-  margin: 24px 0;
-}
-/* line 227, ../sass/_standard.scss */
-body .circles {
-  margin: 0px auto;
-}
-/* line 230, ../sass/_standard.scss */
-body .circles > div {
-  overflow: hidden;
-  float: left;
-  width: auto;
-  height: auto;
-  position: relative;
-  border-radius: 50%;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -khtml-border-radius: 50%;
-  background: #eee;
-}
-/* line 243, ../sass/_standard.scss */
-body .circles > div > div {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-/* line 250, ../sass/_standard.scss */
-body .circles > div > div > div {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-/* line 255, ../sass/_standard.scss */
-body .circles > div > div > div > div {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-@media (max-width: 320px) {
-  /* line 263, ../sass/_standard.scss */
-  body .circles > div {
-    padding: 50%;
-  }
-}
-@media (min-width: 321px) and (max-width: 800px) {
-  /* line 268, ../sass/_standard.scss */
-  body .circles > div {
-    padding: 25%;
-  }
-}
-@media (min-width: 801px) {
-  /* line 273, ../sass/_standard.scss */
-  body .circles {
-    width: 800px;
-  }
-  /* line 274, ../sass/_standard.scss */
-  body .circles > div {
-    padding: 12.5%;
-  }
 }
