--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,8 +11,9 @@ body {
 
     }
 
-    h2 {
+    .condensed {
         font-family: 'Open Sans Condensed', sans-serif;
+        font-weight: 200;
     }
 
     p.p-highlight {
