--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,10 +11,6 @@ body {
 
     }
 
-    h2 {
-        font-family: 'Open Sans Condensed', sans-serif;
-    }
-
     p.p-highlight {
         font-size: 30px;
         line-heigh: 1.25;
@@ -94,6 +90,19 @@ body {
     .btn-primary:hover {
         background: $ui-pink-dark;
         border-color: $ui-pink-dark;
+    }
+
+    .btn-secondary,
+    .btn-secondary:focus {
+        background: $ui-blue;
+        border-color: $ui-blue-dark;
+        color: $white;
+    }
+
+    .btn-secondary:hover {
+        background: $ui-blue-dark;
+        border-color: $ui-blue-dark;
+        color: $white;
     }
 
     .row-glossary {
