--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,7 @@ $grey-lighter5:   lighten($grey, 25%);
 $grey-lighter6:   lighten($grey, 30%);
 $grey-lighter7:   lighten($grey, 45%);
 
+$white:           #ffffff;
 $light:           #ff6633;
 
 $main:            #ff6633;
