--- a/sass/_build.scss
+++ b/sass/_build.scss
@@ -1,3 +1,12 @@
 body {
-	
+	section#build {
+	.checkbox {
+        left: -20px;
+        label {
+            input {
+                margin-top: 1px;
+            }
+        }
+        }
+    }
 }
