Drafted platform.html and _platform.scss.

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -51,6 +51,7 @@ $ui-secondary2:   #5700BF;
 
 $ui-purple:       #252161;
 $ui-purple-dark:  #252161;
+$ui-purple-light:    lighten($ui-purple, 20%);
 
 $ui-grey-light:   #eff0f0;
 $ui-grey:         #626871;
