--- a/css/bootstrap_conf.css
+++ b/css/bootstrap_conf.css
@@ -167,30 +167,20 @@ body .jumbotron p {
 body .container .jumbotron, body .container-fluid .jumbotron {
   border-radius: 0;
 }
-/* line 139, ../sass/_base.scss */
-body .page-header-icon img {
-  margin-right: 20px;
-}
-/* line 143, ../sass/_base.scss */
-body .page-header-icon h2 {
-  font-size: 25px;
-  margin-top: 23px;
-  margin-bottom: 15px;
-}
-/* line 150, ../sass/_base.scss */
+/* line 138, ../sass/_base.scss */
 body .jumbotron.dark-purple {
   background-color: #262262;
 }
-/* line 154, ../sass/_base.scss */
+/* line 142, ../sass/_base.scss */
 body .jumbotron-group {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 159, ../sass/_base.scss */
+/* line 147, ../sass/_base.scss */
 body .jumbotron .intro {
   line-height: 1.25;
 }
-/* line 163, ../sass/_base.scss */
+/* line 151, ../sass/_base.scss */
 body .jumbotron.footer {
   background: #222;
   color: #fff;
@@ -198,31 +188,31 @@ body .jumbotron.footer {
   margin-bottom: 0;
   border: none;
 }
-/* line 169, ../sass/_base.scss */
+/* line 157, ../sass/_base.scss */
 body .jumbotron.footer .row {
   max-width: 100%;
 }
-/* line 173, ../sass/_base.scss */
+/* line 161, ../sass/_base.scss */
 body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
   color: #fefefe;
 }
-/* line 177, ../sass/_base.scss */
+/* line 165, ../sass/_base.scss */
 body .jumbotron.footer p {
   font-size: 14px;
 }
-/* line 183, ../sass/_base.scss */
+/* line 171, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul {
   display: inline-block;
 }
-/* line 186, ../sass/_base.scss */
+/* line 174, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li {
   float: left;
 }
-/* line 189, ../sass/_base.scss */
+/* line 177, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a {
   width: 100%;
 }
-/* line 192, ../sass/_base.scss */
+/* line 180, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a,
 body .navbar-footer .bottom-bar p {
   display: block;
@@ -232,65 +222,56 @@ body .navbar-footer .bottom-bar p {
   font-weight: normal;
   text-transform: none;
 }
-/* line 201, ../sass/_base.scss */
+/* line 189, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li:first-of-type > a {
   padding-left: 0;
 }
-/* line 207, ../sass/_base.scss */
-body .platform-bubbles h3 {
-  display: inline-block;
-  border: 2px solid #25AAE1;
-  padding: 63px 0;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-}
-/* line 217, ../sass/_base.scss */
+/* line 194, ../sass/_base.scss */
 body .purple {
   color: #60297C;
 }
-/* line 220, ../sass/_base.scss */
+/* line 197, ../sass/_base.scss */
 body .pink {
   color: #EB1979;
 }
-/* line 223, ../sass/_base.scss */
+/* line 200, ../sass/_base.scss */
 body .light-blue {
   color: #25AAE1;
 }
-/* line 226, ../sass/_base.scss */
+/* line 203, ../sass/_base.scss */
 body .fern {
   color: #62BD83;
 }
-/* line 229, ../sass/_base.scss */
+/* line 206, ../sass/_base.scss */
 body .green {
   color: #22AE50;
 }
-/* line 235, ../sass/_base.scss */
+/* line 212, ../sass/_base.scss */
 body #myModal .modal-header {
   border-bottom: none;
 }
-/* line 238, ../sass/_base.scss */
+/* line 215, ../sass/_base.scss */
 body #myModal .btn-wide {
   padding: 6px 24px;
 }
-/* line 241, ../sass/_base.scss */
+/* line 218, ../sass/_base.scss */
 body #myModal .modal-title {
   text-transform: uppercase;
 }
-/* line 244, ../sass/_base.scss */
+/* line 221, ../sass/_base.scss */
 body #myModal .modal-content {
   padding: 24px;
   border-radius: 0;
 }
-/* line 249, ../sass/_base.scss */
+/* line 226, ../sass/_base.scss */
 body #myModal input {
   margin: 24px 0;
 }
-/* line 254, ../sass/_base.scss */
+/* line 231, ../sass/_base.scss */
 body .circles {
   margin: 0px auto;
 }
-/* line 257, ../sass/_base.scss */
+/* line 234, ../sass/_base.scss */
 body .circles > div {
   overflow: hidden;
   float: left;
@@ -303,7 +284,7 @@ body .circles > div {
   -khtml-border-radius: 50%;
   background: #eee;
 }
-/* line 270, ../sass/_base.scss */
+/* line 247, ../sass/_base.scss */
 body .circles > div > div {
   position: absolute;
   top: 0;
@@ -311,36 +292,36 @@ body .circles > div > div {
   bottom: 0;
   left: 0;
 }
-/* line 277, ../sass/_base.scss */
+/* line 254, ../sass/_base.scss */
 body .circles > div > div > div {
   display: table;
   width: 100%;
   height: 100%;
 }
-/* line 282, ../sass/_base.scss */
+/* line 259, ../sass/_base.scss */
 body .circles > div > div > div > div {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 @media (max-width: 320px) {
-  /* line 290, ../sass/_base.scss */
+  /* line 267, ../sass/_base.scss */
   body .circles > div {
     padding: 50%;
   }
 }
 @media (min-width: 321px) and (max-width: 800px) {
-  /* line 295, ../sass/_base.scss */
+  /* line 272, ../sass/_base.scss */
   body .circles > div {
     padding: 25%;
   }
 }
 @media (min-width: 801px) {
-  /* line 300, ../sass/_base.scss */
+  /* line 277, ../sass/_base.scss */
   body .circles {
     width: 800px;
   }
-  /* line 301, ../sass/_base.scss */
+  /* line 278, ../sass/_base.scss */
   body .circles > div {
     padding: 12.5%;
   }
@@ -351,4 +332,24 @@ body .disable-margin-padding {
   margin: 0;
   padding: 0;
   padding-bottom: 3px;
+}
+
+/* line 3, ../sass/_platform.scss */
+body .platform-bubbles h3 {
+  display: inline-block;
+  padding: 38px 0;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  line-height: 1;
+  background: #423bad;
+}
+/* line 14, ../sass/_platform.scss */
+body .col-no-padding {
+  padding: 0;
+}
+/* line 18, ../sass/_platform.scss */
+body .glyphicon-lg {
+  font-size: 60px;
+  padding-top: 36px;
 }
