--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,7 +13,7 @@ body {
 
     p.p-highlight {
         font-size: 30px;
-        line-heigh: 1.25;
+        line-height: 1.25;
     }
 
     .border {
