--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,7 @@ $grey-lighter4:   lighten($grey, 20%);
 $grey-lighter5:   lighten($grey, 25%);
 $grey-lighter6:   lighten($grey, 30%);
 $grey-lighter7:   lighten($grey, 45%);
+$grey-lighter8:   lighten($grey, 65%);
 
 $white:           #ffffff;
 $light:           #ff6633;
