--- a/css/bootstrap_conf.css
+++ b/css/bootstrap_conf.css
@@ -34,59 +34,54 @@ body a :hover {
   color: #1A8BB9;
 }
 /* line 14, ../sass/_base.scss */
-body .condensed {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: 200;
-}
-/* line 19, ../sass/_base.scss */
 body p.p-highlight {
   font-size: 30px;
   line-heigh: 1.25;
 }
-/* line 24, ../sass/_base.scss */
+/* line 19, ../sass/_base.scss */
 body .border {
   border: 2px solid #333;
   padding: 25px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
-/* line 31, ../sass/_base.scss */
+/* line 26, ../sass/_base.scss */
 body .purple-bg {
   background-color: #252161;
 }
-/* line 34, ../sass/_base.scss */
+/* line 29, ../sass/_base.scss */
 body .purple-dark-bg {
   background-color: #252161;
 }
-/* line 37, ../sass/_base.scss */
+/* line 32, ../sass/_base.scss */
 body .pink-bg {
   background-color: #da4a89;
 }
-/* line 40, ../sass/_base.scss */
+/* line 35, ../sass/_base.scss */
 body .blue-bg {
   background-color: #2FAADB;
 }
-/* line 43, ../sass/_base.scss */
+/* line 38, ../sass/_base.scss */
 body .green-bg {
   background-color: #5fbc9b;
 }
-/* line 47, ../sass/_base.scss */
+/* line 42, ../sass/_base.scss */
 body .purple {
   color: #252161;
 }
-/* line 50, ../sass/_base.scss */
+/* line 45, ../sass/_base.scss */
 body .pink {
   color: #da4a89;
 }
-/* line 53, ../sass/_base.scss */
+/* line 48, ../sass/_base.scss */
 body .blue {
   color: #2FAADB;
 }
-/* line 56, ../sass/_base.scss */
+/* line 51, ../sass/_base.scss */
 body .green {
   color: #5fbc9b;
 }
-/* line 60, ../sass/_base.scss */
+/* line 55, ../sass/_base.scss */
 body .navbar,
 body .navbar-default .navbar-brand,
 body .navbar-default .navbar-nav > li > a,
@@ -95,92 +90,123 @@ body .navbar .name h1 a, body .navbar .name h2 a, body .navbar .name h3 a, body 
   background: white !important;
   color: #222 !important;
 }
-/* line 67, ../sass/_base.scss */
+/* line 62, ../sass/_base.scss */
 body .navbar .navbar-brand,
 body .navbar-default .navbar-brand .navbar-brand,
 body .navbar-default .navbar-nav > li > a .navbar-brand,
 body .navbar .name h1 a .navbar-brand, body .navbar .name h2 a .navbar-brand, body .navbar .name h3 a .navbar-brand, body .navbar .name h4 a .navbar-brand, body .navbar .name p a .navbar-brand, body .navbar .name span a .navbar-brand {
   font-weight: bold;
 }
-/* line 72, ../sass/_base.scss */
+/* line 67, ../sass/_base.scss */
 body ul.nav.navbar-nav li a {
   text-transform: uppercase;
 }
-/* line 76, ../sass/_base.scss */
+/* line 71, ../sass/_base.scss */
 body ul.no-list-style {
   margin-left: 0;
   padding: 0;
 }
-/* line 79, ../sass/_base.scss */
+/* line 74, ../sass/_base.scss */
 body ul.no-list-style li {
   list-style-type: none;
 }
-/* line 84, ../sass/_base.scss */
+/* line 79, ../sass/_base.scss */
 body .navbar-default {
   box-shadow: none;
   border-bottom: none;
 }
-/* line 89, ../sass/_base.scss */
+/* line 87, ../sass/_base.scss */
+body .btn a,
+body .btn:hover a,
+body .btn:focus a {
+  color: #ffffff;
+  text-decoration: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+  display: block;
+}
+/* line 96, ../sass/_base.scss */
+body .btn h5,
+body .btn:hover h5,
+body .btn:focus h5 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* line 102, ../sass/_base.scss */
 body .btn-primary,
 body .btn-primary:focus {
   background: #da4a89;
   border-color: #ce367c;
 }
-/* line 95, ../sass/_base.scss */
+/* line 108, ../sass/_base.scss */
 body .btn-primary:hover {
   background: #ce367c;
   border-color: #ce367c;
 }
-/* line 100, ../sass/_base.scss */
+/* line 113, ../sass/_base.scss */
+body .btn-secondary,
+body .btn-secondary:focus {
+  background: #2FAADB;
+  border-color: #268db5;
+  color: #ffffff;
+}
+/* line 120, ../sass/_base.scss */
+body .btn-secondary:hover {
+  background: #268db5;
+  border-color: #268db5;
+  color: #ffffff;
+}
+/* line 126, ../sass/_base.scss */
 body .row-glossary {
   margin-top: 20px;
 }
-/* line 103, ../sass/_base.scss */
+/* line 129, ../sass/_base.scss */
 body .row-glossary h1, body .row-glossary h2, body .row-glossary h3, body .row-glossary h4, body .row-glossary h5, body .row-glossary h6 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1;
 }
-/* line 109, ../sass/_base.scss */
+/* line 135, ../sass/_base.scss */
 body .row-glossary h3 {
   font-size: 48px;
 }
-/* line 113, ../sass/_base.scss */
+/* line 139, ../sass/_base.scss */
 body .row-glossary img {
   margin-top: 8px;
 }
-/* line 118, ../sass/_base.scss */
+/* line 144, ../sass/_base.scss */
 body h5, body h6 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-/* line 124, ../sass/_base.scss */
+/* line 150, ../sass/_base.scss */
 body .jumbotron {
   margin-top: 30px;
   color: #FFF;
 }
-/* line 127, ../sass/_base.scss */
+/* line 153, ../sass/_base.scss */
 body .jumbotron p {
   font-size: 14px;
 }
-/* line 133, ../sass/_base.scss */
+/* line 159, ../sass/_base.scss */
 body .container .jumbotron, body .container-fluid .jumbotron {
   border-radius: 0;
 }
-/* line 138, ../sass/_base.scss */
+/* line 164, ../sass/_base.scss */
 body .jumbotron.dark-purple {
   background-color: #262262;
 }
-/* line 142, ../sass/_base.scss */
+/* line 168, ../sass/_base.scss */
 body .jumbotron-group {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 147, ../sass/_base.scss */
+/* line 173, ../sass/_base.scss */
 body .jumbotron .intro {
   line-height: 1.25;
 }
-/* line 151, ../sass/_base.scss */
+/* line 177, ../sass/_base.scss */
 body .jumbotron.footer {
   background: #222;
   color: #fff;
@@ -188,31 +214,31 @@ body .jumbotron.footer {
   margin-bottom: 0;
   border: none;
 }
-/* line 157, ../sass/_base.scss */
+/* line 183, ../sass/_base.scss */
 body .jumbotron.footer .row {
   max-width: 100%;
 }
-/* line 161, ../sass/_base.scss */
+/* line 187, ../sass/_base.scss */
 body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
   color: #fefefe;
 }
-/* line 165, ../sass/_base.scss */
+/* line 191, ../sass/_base.scss */
 body .jumbotron.footer p {
   font-size: 14px;
 }
-/* line 171, ../sass/_base.scss */
+/* line 197, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul {
   display: inline-block;
 }
-/* line 174, ../sass/_base.scss */
+/* line 200, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li {
   float: left;
 }
-/* line 177, ../sass/_base.scss */
+/* line 203, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a {
   width: 100%;
 }
-/* line 180, ../sass/_base.scss */
+/* line 206, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a,
 body .navbar-footer .bottom-bar p {
   display: block;
@@ -222,56 +248,56 @@ body .navbar-footer .bottom-bar p {
   font-weight: normal;
   text-transform: none;
 }
-/* line 189, ../sass/_base.scss */
+/* line 215, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li:first-of-type > a {
   padding-left: 0;
 }
-/* line 194, ../sass/_base.scss */
+/* line 220, ../sass/_base.scss */
 body .purple {
   color: #60297C;
 }
-/* line 197, ../sass/_base.scss */
+/* line 223, ../sass/_base.scss */
 body .pink {
   color: #EB1979;
 }
-/* line 200, ../sass/_base.scss */
+/* line 226, ../sass/_base.scss */
 body .light-blue {
   color: #25AAE1;
 }
-/* line 203, ../sass/_base.scss */
+/* line 229, ../sass/_base.scss */
 body .fern {
   color: #62BD83;
 }
-/* line 206, ../sass/_base.scss */
+/* line 232, ../sass/_base.scss */
 body .green {
   color: #22AE50;
 }
-/* line 212, ../sass/_base.scss */
+/* line 238, ../sass/_base.scss */
 body #myModal .modal-header {
   border-bottom: none;
 }
-/* line 215, ../sass/_base.scss */
+/* line 241, ../sass/_base.scss */
 body #myModal .btn-wide {
   padding: 6px 24px;
 }
-/* line 218, ../sass/_base.scss */
+/* line 244, ../sass/_base.scss */
 body #myModal .modal-title {
   text-transform: uppercase;
 }
-/* line 221, ../sass/_base.scss */
+/* line 247, ../sass/_base.scss */
 body #myModal .modal-content {
   padding: 24px;
   border-radius: 0;
 }
-/* line 226, ../sass/_base.scss */
+/* line 252, ../sass/_base.scss */
 body #myModal input {
   margin: 24px 0;
 }
-/* line 231, ../sass/_base.scss */
+/* line 257, ../sass/_base.scss */
 body .circles {
   margin: 0px auto;
 }
-/* line 234, ../sass/_base.scss */
+/* line 260, ../sass/_base.scss */
 body .circles > div {
   overflow: hidden;
   float: left;
@@ -284,7 +310,7 @@ body .circles > div {
   -khtml-border-radius: 50%;
   background: #eee;
 }
-/* line 247, ../sass/_base.scss */
+/* line 273, ../sass/_base.scss */
 body .circles > div > div {
   position: absolute;
   top: 0;
@@ -292,36 +318,36 @@ body .circles > div > div {
   bottom: 0;
   left: 0;
 }
-/* line 254, ../sass/_base.scss */
+/* line 280, ../sass/_base.scss */
 body .circles > div > div > div {
   display: table;
   width: 100%;
   height: 100%;
 }
-/* line 259, ../sass/_base.scss */
+/* line 285, ../sass/_base.scss */
 body .circles > div > div > div > div {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 @media (max-width: 320px) {
-  /* line 267, ../sass/_base.scss */
+  /* line 293, ../sass/_base.scss */
   body .circles > div {
     padding: 50%;
   }
 }
 @media (min-width: 321px) and (max-width: 800px) {
-  /* line 272, ../sass/_base.scss */
+  /* line 298, ../sass/_base.scss */
   body .circles > div {
     padding: 25%;
   }
 }
 @media (min-width: 801px) {
-  /* line 277, ../sass/_base.scss */
+  /* line 303, ../sass/_base.scss */
   body .circles {
     width: 800px;
   }
-  /* line 278, ../sass/_base.scss */
+  /* line 304, ../sass/_base.scss */
   body .circles > div {
     padding: 12.5%;
   }
@@ -332,6 +358,15 @@ body .disable-margin-padding {
   margin: 0;
   padding: 0;
   padding-bottom: 3px;
+}
+
+/* line 3, ../sass/_build.scss */
+body section#build .checkbox {
+  left: -20px;
+}
+/* line 6, ../sass/_build.scss */
+body section#build .checkbox label input {
+  margin-top: 1px;
 }
 
 /* line 3, ../sass/_platform.scss */
@@ -345,10 +380,34 @@ body .platform-bubbles h3 {
   background: #423bad;
 }
 /* line 14, ../sass/_platform.scss */
+body .btn {
+  padding: 0;
+}
+/* line 21, ../sass/_platform.scss */
+body .btn a,
+body .btn:hover a,
+body .btn:focus a {
+  color: #ffffff;
+  text-decoration: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-left: 12px;
+  padding-right: 12px;
+  width: 100%;
+  display: block;
+}
+/* line 32, ../sass/_platform.scss */
+body .btn h5,
+body .btn:hover h5,
+body .btn:focus h5 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* line 38, ../sass/_platform.scss */
 body .col-no-padding {
   padding: 0;
 }
-/* line 18, ../sass/_platform.scss */
+/* line 42, ../sass/_platform.scss */
 body .glyphicon-lg {
   font-size: 60px;
   padding-top: 36px;
