--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,12 @@
+//Text and links - added by varco
+$a: #25AAE1;
+$aHover: #1A8BB9; 
+
+
 // Colors
 $grey:            #464852;
 $grey-darker:     #313236;
+$grey-default:    #333;
 $grey-lighter:    lighten($grey, 5%);
 $grey-lighter2:   lighten($grey, 10%);
 $grey-lighter3:   lighten($grey, 15%);
