--- a/css/bootstrap_conf.css
+++ b/css/bootstrap_conf.css
@@ -33,89 +33,89 @@ body a {
 body a :hover {
   color: #1A8BB9;
 }
-/* line 14, ../sass/_base.scss */
+/* line 13, ../sass/_base.scss */
 body p.p-highlight {
   font-size: 30px;
   line-height: 1.25;
 }
-/* line 19, ../sass/_base.scss */
+/* line 18, ../sass/_base.scss */
 body .border {
   border: 2px solid #333;
   padding: 25px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
-/* line 26, ../sass/_base.scss */
+/* line 25, ../sass/_base.scss */
 body .purple-bg {
   background-color: #252161;
 }
-/* line 29, ../sass/_base.scss */
+/* line 28, ../sass/_base.scss */
 body .purple-dark-bg {
   background-color: #252161;
 }
-/* line 32, ../sass/_base.scss */
+/* line 31, ../sass/_base.scss */
 body .pink-bg {
   background-color: #da4a89;
 }
-/* line 35, ../sass/_base.scss */
+/* line 34, ../sass/_base.scss */
 body .blue-bg {
   background-color: #2FAADB;
 }
-/* line 38, ../sass/_base.scss */
+/* line 37, ../sass/_base.scss */
 body .green-bg {
   background-color: #5fbc9b;
 }
-/* line 42, ../sass/_base.scss */
+/* line 41, ../sass/_base.scss */
 body .purple {
   color: #252161;
 }
-/* line 45, ../sass/_base.scss */
+/* line 44, ../sass/_base.scss */
 body .pink {
   color: #da4a89;
 }
-/* line 48, ../sass/_base.scss */
+/* line 47, ../sass/_base.scss */
 body .blue {
   color: #2FAADB;
 }
-/* line 51, ../sass/_base.scss */
+/* line 50, ../sass/_base.scss */
 body .green {
   color: #5fbc9b;
 }
-/* line 55, ../sass/_base.scss */
+/* line 54, ../sass/_base.scss */
 body .navbar,
 body .navbar-default .navbar-brand,
 body .navbar-default .navbar-nav > li > a,
 body .navbar .name h1 a, body .navbar .name h2 a, body .navbar .name h3 a, body .navbar .name h4 a, body .navbar .name p a, body .navbar .name span a {
-  background-color: white !important;
-  background: white !important;
+  background-color: #ffffff !important;
+  background: #ffffff !important;
   color: #222 !important;
 }
-/* line 62, ../sass/_base.scss */
+/* line 61, ../sass/_base.scss */
 body .navbar .navbar-brand,
 body .navbar-default .navbar-brand .navbar-brand,
 body .navbar-default .navbar-nav > li > a .navbar-brand,
 body .navbar .name h1 a .navbar-brand, body .navbar .name h2 a .navbar-brand, body .navbar .name h3 a .navbar-brand, body .navbar .name h4 a .navbar-brand, body .navbar .name p a .navbar-brand, body .navbar .name span a .navbar-brand {
   font-weight: bold;
 }
-/* line 67, ../sass/_base.scss */
+/* line 66, ../sass/_base.scss */
 body ul.nav.navbar-nav li a {
   text-transform: uppercase;
 }
-/* line 71, ../sass/_base.scss */
+/* line 70, ../sass/_base.scss */
 body ul.no-list-style {
   margin-left: 0;
   padding: 0;
 }
-/* line 74, ../sass/_base.scss */
+/* line 73, ../sass/_base.scss */
 body ul.no-list-style li {
   list-style-type: none;
 }
-/* line 79, ../sass/_base.scss */
+/* line 78, ../sass/_base.scss */
 body .navbar-default {
   box-shadow: none;
   border-bottom: none;
 }
-/* line 87, ../sass/_base.scss */
+/* line 86, ../sass/_base.scss */
 body .btn a,
 body .btn:hover a,
 body .btn:focus a {
@@ -126,87 +126,87 @@ body .btn:focus a {
   width: 100%;
   display: block;
 }
-/* line 96, ../sass/_base.scss */
+/* line 95, ../sass/_base.scss */
 body .btn h5,
 body .btn:hover h5,
 body .btn:focus h5 {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 102, ../sass/_base.scss */
+/* line 101, ../sass/_base.scss */
 body .btn-primary,
 body .btn-primary:focus {
   background: #da4a89;
   border-color: #ce367c;
 }
-/* line 108, ../sass/_base.scss */
+/* line 107, ../sass/_base.scss */
 body .btn-primary:hover {
   background: #ce367c;
   border-color: #ce367c;
 }
-/* line 113, ../sass/_base.scss */
+/* line 112, ../sass/_base.scss */
 body .btn-secondary,
 body .btn-secondary:focus {
   background: #2FAADB;
   border-color: #268db5;
   color: #ffffff;
 }
-/* line 120, ../sass/_base.scss */
+/* line 119, ../sass/_base.scss */
 body .btn-secondary:hover {
   background: #268db5;
   border-color: #268db5;
   color: #ffffff;
 }
-/* line 126, ../sass/_base.scss */
+/* line 125, ../sass/_base.scss */
 body .row-glossary {
   margin-top: 20px;
 }
-/* line 129, ../sass/_base.scss */
+/* line 128, ../sass/_base.scss */
 body .row-glossary h1, body .row-glossary h2, body .row-glossary h3, body .row-glossary h4, body .row-glossary h5, body .row-glossary h6 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1;
 }
-/* line 135, ../sass/_base.scss */
+/* line 134, ../sass/_base.scss */
 body .row-glossary h3 {
   font-size: 48px;
 }
-/* line 139, ../sass/_base.scss */
+/* line 138, ../sass/_base.scss */
 body .row-glossary img {
   margin-top: 8px;
 }
-/* line 144, ../sass/_base.scss */
+/* line 143, ../sass/_base.scss */
 body h5, body h6 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-/* line 150, ../sass/_base.scss */
+/* line 149, ../sass/_base.scss */
 body .jumbotron {
   margin-top: 30px;
   color: #FFF;
 }
-/* line 153, ../sass/_base.scss */
+/* line 152, ../sass/_base.scss */
 body .jumbotron p {
   font-size: 14px;
 }
-/* line 159, ../sass/_base.scss */
+/* line 158, ../sass/_base.scss */
 body .container .jumbotron, body .container-fluid .jumbotron {
   border-radius: 0;
 }
-/* line 164, ../sass/_base.scss */
+/* line 163, ../sass/_base.scss */
 body .jumbotron.dark-purple {
-  background-color: #262262;
+  background-color: #252161;
 }
-/* line 168, ../sass/_base.scss */
+/* line 167, ../sass/_base.scss */
 body .jumbotron-group {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 173, ../sass/_base.scss */
+/* line 172, ../sass/_base.scss */
 body .jumbotron .intro {
   line-height: 1.25;
 }
-/* line 177, ../sass/_base.scss */
+/* line 176, ../sass/_base.scss */
 body .jumbotron.footer {
   background: #222;
   color: #fff;
@@ -214,31 +214,31 @@ body .jumbotron.footer {
   margin-bottom: 0;
   border: none;
 }
-/* line 183, ../sass/_base.scss */
+/* line 182, ../sass/_base.scss */
 body .jumbotron.footer .row {
   max-width: 100%;
 }
-/* line 187, ../sass/_base.scss */
+/* line 186, ../sass/_base.scss */
 body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
   color: #fefefe;
 }
-/* line 191, ../sass/_base.scss */
+/* line 190, ../sass/_base.scss */
 body .jumbotron.footer p {
   font-size: 14px;
 }
-/* line 197, ../sass/_base.scss */
+/* line 196, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul {
   display: inline-block;
 }
-/* line 200, ../sass/_base.scss */
+/* line 199, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li {
   float: left;
 }
-/* line 203, ../sass/_base.scss */
+/* line 202, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a {
   width: 100%;
 }
-/* line 206, ../sass/_base.scss */
+/* line 205, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a,
 body .navbar-footer .bottom-bar p {
   display: block;
@@ -248,56 +248,56 @@ body .navbar-footer .bottom-bar p {
   font-weight: normal;
   text-transform: none;
 }
-/* line 215, ../sass/_base.scss */
+/* line 214, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li:first-of-type > a {
   padding-left: 0;
 }
-/* line 220, ../sass/_base.scss */
+/* line 219, ../sass/_base.scss */
 body .purple {
   color: #60297C;
 }
-/* line 223, ../sass/_base.scss */
+/* line 222, ../sass/_base.scss */
 body .pink {
   color: #EB1979;
 }
-/* line 226, ../sass/_base.scss */
+/* line 225, ../sass/_base.scss */
 body .light-blue {
   color: #25AAE1;
 }
-/* line 229, ../sass/_base.scss */
+/* line 228, ../sass/_base.scss */
 body .fern {
   color: #62BD83;
 }
-/* line 232, ../sass/_base.scss */
+/* line 231, ../sass/_base.scss */
 body .green {
   color: #22AE50;
 }
-/* line 238, ../sass/_base.scss */
+/* line 237, ../sass/_base.scss */
 body #myModal .modal-header {
   border-bottom: none;
 }
-/* line 241, ../sass/_base.scss */
+/* line 240, ../sass/_base.scss */
 body #myModal .btn-wide {
   padding: 6px 24px;
 }
-/* line 244, ../sass/_base.scss */
+/* line 243, ../sass/_base.scss */
 body #myModal .modal-title {
   text-transform: uppercase;
 }
-/* line 247, ../sass/_base.scss */
+/* line 246, ../sass/_base.scss */
 body #myModal .modal-content {
   padding: 24px;
   border-radius: 0;
 }
-/* line 252, ../sass/_base.scss */
+/* line 251, ../sass/_base.scss */
 body #myModal input {
   margin: 24px 0;
 }
-/* line 257, ../sass/_base.scss */
+/* line 256, ../sass/_base.scss */
 body .circles {
   margin: 0px auto;
 }
-/* line 260, ../sass/_base.scss */
+/* line 259, ../sass/_base.scss */
 body .circles > div {
   overflow: hidden;
   float: left;
@@ -310,7 +310,7 @@ body .circles > div {
   -khtml-border-radius: 50%;
   background: #eee;
 }
-/* line 273, ../sass/_base.scss */
+/* line 272, ../sass/_base.scss */
 body .circles > div > div {
   position: absolute;
   top: 0;
@@ -318,36 +318,36 @@ body .circles > div > div {
   bottom: 0;
   left: 0;
 }
-/* line 280, ../sass/_base.scss */
+/* line 279, ../sass/_base.scss */
 body .circles > div > div > div {
   display: table;
   width: 100%;
   height: 100%;
 }
-/* line 285, ../sass/_base.scss */
+/* line 284, ../sass/_base.scss */
 body .circles > div > div > div > div {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 @media (max-width: 320px) {
-  /* line 293, ../sass/_base.scss */
+  /* line 292, ../sass/_base.scss */
   body .circles > div {
     padding: 50%;
   }
 }
 @media (min-width: 321px) and (max-width: 800px) {
-  /* line 298, ../sass/_base.scss */
+  /* line 297, ../sass/_base.scss */
   body .circles > div {
     padding: 25%;
   }
 }
 @media (min-width: 801px) {
-  /* line 303, ../sass/_base.scss */
+  /* line 302, ../sass/_base.scss */
   body .circles {
     width: 800px;
   }
-  /* line 304, ../sass/_base.scss */
+  /* line 303, ../sass/_base.scss */
   body .circles > div {
     padding: 12.5%;
   }
@@ -358,6 +358,16 @@ body .disable-margin-padding {
   margin: 0;
   padding: 0;
   padding-bottom: 3px;
+}
+/* line 8, ../sass/_index.scss */
+body a#indiegogo {
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+}
+/* line 12, ../sass/_index.scss */
+body a#indiegogo :hover {
+  color: #268db5;
 }
 
 /* line 3, ../sass/_build.scss */
