--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -4,4 +4,13 @@ body {
         padding: 0;
         padding-bottom: 3px;
     }
+      
+    a#indiegogo {
+    	color: $grey-default;
+    	font-weight: bold;
+    	text-decoration: none;
+    	:hover {
+    	color: $ui-blue-dark;
+        }
+    }
 }
