Edited styling to both modals on homepage.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,6 +38,10 @@ body {
         background-color: $ui-green;
     }
 
+    .purple-red-bg {
+        background: $ui-purple-red;
+    }
+
     .purple {
 	    color: $ui-purple;
     }
