--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -61,6 +61,8 @@ $ui-purple:       #252161;
 $ui-purple-dark:  #252161;
 $ui-purple-light:    lighten($ui-purple, 20%);
 
+$ui-purple-red:	  #60297C;
+
 $ui-grey-light:   #eff0f0;
 $ui-grey:         #626871;
 $ui-grey-dark:    #4b5056;
