--- a/css/bootstrap_conf.css
+++ b/css/bootstrap_conf.css
@@ -66,22 +66,26 @@ body .green-bg {
   background-color: #5fbc9b;
 }
 /* line 41, ../sass/_base.scss */
+body .purple-red-bg {
+  background: #60297C;
+}
+/* line 45, ../sass/_base.scss */
 body .purple {
   color: #252161;
 }
-/* line 44, ../sass/_base.scss */
+/* line 48, ../sass/_base.scss */
 body .pink {
   color: #da4a89;
 }
-/* line 47, ../sass/_base.scss */
+/* line 51, ../sass/_base.scss */
 body .blue {
   color: #2FAADB;
 }
-/* line 50, ../sass/_base.scss */
+/* line 54, ../sass/_base.scss */
 body .green {
   color: #5fbc9b;
 }
-/* line 54, ../sass/_base.scss */
+/* line 58, ../sass/_base.scss */
 body .navbar,
 body .navbar-default .navbar-brand,
 body .navbar-default .navbar-nav > li > a,
@@ -90,32 +94,32 @@ body .navbar .name h1 a, body .navbar .name h2 a, body .navbar .name h3 a, body 
   background: #ffffff !important;
   color: #222 !important;
 }
-/* line 61, ../sass/_base.scss */
+/* line 65, ../sass/_base.scss */
 body .navbar .navbar-brand,
 body .navbar-default .navbar-brand .navbar-brand,
 body .navbar-default .navbar-nav > li > a .navbar-brand,
 body .navbar .name h1 a .navbar-brand, body .navbar .name h2 a .navbar-brand, body .navbar .name h3 a .navbar-brand, body .navbar .name h4 a .navbar-brand, body .navbar .name p a .navbar-brand, body .navbar .name span a .navbar-brand {
   font-weight: bold;
 }
-/* line 66, ../sass/_base.scss */
+/* line 70, ../sass/_base.scss */
 body ul.nav.navbar-nav li a {
   text-transform: uppercase;
 }
-/* line 70, ../sass/_base.scss */
+/* line 74, ../sass/_base.scss */
 body ul.no-list-style {
   margin-left: 0;
   padding: 0;
 }
-/* line 73, ../sass/_base.scss */
+/* line 77, ../sass/_base.scss */
 body ul.no-list-style li {
   list-style-type: none;
 }
-/* line 78, ../sass/_base.scss */
+/* line 82, ../sass/_base.scss */
 body .navbar-default {
   box-shadow: none;
   border-bottom: none;
 }
-/* line 86, ../sass/_base.scss */
+/* line 90, ../sass/_base.scss */
 body .btn a,
 body .btn:hover a,
 body .btn:focus a {
@@ -126,87 +130,87 @@ body .btn:focus a {
   width: 100%;
   display: block;
 }
-/* line 95, ../sass/_base.scss */
+/* line 99, ../sass/_base.scss */
 body .btn h5,
 body .btn:hover h5,
 body .btn:focus h5 {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 101, ../sass/_base.scss */
+/* line 105, ../sass/_base.scss */
 body .btn-primary,
 body .btn-primary:focus {
   background: #da4a89;
   border-color: #ce367c;
 }
-/* line 107, ../sass/_base.scss */
+/* line 111, ../sass/_base.scss */
 body .btn-primary:hover {
   background: #ce367c;
   border-color: #ce367c;
 }
-/* line 112, ../sass/_base.scss */
+/* line 116, ../sass/_base.scss */
 body .btn-secondary,
 body .btn-secondary:focus {
   background: #2FAADB;
   border-color: #268db5;
   color: #ffffff;
 }
-/* line 119, ../sass/_base.scss */
+/* line 123, ../sass/_base.scss */
 body .btn-secondary:hover {
   background: #268db5;
   border-color: #268db5;
   color: #ffffff;
 }
-/* line 125, ../sass/_base.scss */
+/* line 129, ../sass/_base.scss */
 body .row-glossary {
   margin-top: 20px;
 }
-/* line 128, ../sass/_base.scss */
+/* line 132, ../sass/_base.scss */
 body .row-glossary h1, body .row-glossary h2, body .row-glossary h3, body .row-glossary h4, body .row-glossary h5, body .row-glossary h6 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1;
 }
-/* line 134, ../sass/_base.scss */
+/* line 138, ../sass/_base.scss */
 body .row-glossary h3 {
   font-size: 48px;
 }
-/* line 138, ../sass/_base.scss */
+/* line 142, ../sass/_base.scss */
 body .row-glossary img {
   margin-top: 8px;
 }
-/* line 143, ../sass/_base.scss */
+/* line 147, ../sass/_base.scss */
 body h5, body h6 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-/* line 149, ../sass/_base.scss */
+/* line 153, ../sass/_base.scss */
 body .jumbotron {
   margin-top: 30px;
   color: #FFF;
 }
-/* line 152, ../sass/_base.scss */
+/* line 156, ../sass/_base.scss */
 body .jumbotron p {
   font-size: 14px;
 }
-/* line 158, ../sass/_base.scss */
+/* line 162, ../sass/_base.scss */
 body .container .jumbotron, body .container-fluid .jumbotron {
   border-radius: 0;
 }
-/* line 163, ../sass/_base.scss */
+/* line 167, ../sass/_base.scss */
 body .jumbotron.dark-purple {
   background-color: #252161;
 }
-/* line 167, ../sass/_base.scss */
+/* line 171, ../sass/_base.scss */
 body .jumbotron-group {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 172, ../sass/_base.scss */
+/* line 176, ../sass/_base.scss */
 body .jumbotron .intro {
   line-height: 1.25;
 }
-/* line 176, ../sass/_base.scss */
+/* line 180, ../sass/_base.scss */
 body .jumbotron.footer {
   background: #222;
   color: #fff;
@@ -214,31 +218,31 @@ body .jumbotron.footer {
   margin-bottom: 0;
   border: none;
 }
-/* line 182, ../sass/_base.scss */
+/* line 186, ../sass/_base.scss */
 body .jumbotron.footer .row {
   max-width: 100%;
 }
-/* line 186, ../sass/_base.scss */
+/* line 190, ../sass/_base.scss */
 body .jumbotron.footer h1, body .jumbotron.footer h2, body .jumbotron.footer h3, body .jumbotron.footer h4, body .jumbotron.footer h5, body .jumbotron.footer h6, body .jumbotron.footer p, body .jumbotron.footer .panel.footer-panel li, body .jumbotron.footer dl {
   color: #fefefe;
 }
-/* line 190, ../sass/_base.scss */
+/* line 194, ../sass/_base.scss */
 body .jumbotron.footer p {
   font-size: 14px;
 }
-/* line 196, ../sass/_base.scss */
+/* line 200, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul {
   display: inline-block;
 }
-/* line 199, ../sass/_base.scss */
+/* line 203, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li {
   float: left;
 }
-/* line 202, ../sass/_base.scss */
+/* line 206, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a {
   width: 100%;
 }
-/* line 205, ../sass/_base.scss */
+/* line 209, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li > a,
 body .navbar-footer .bottom-bar p {
   display: block;
@@ -248,56 +252,56 @@ body .navbar-footer .bottom-bar p {
   font-weight: normal;
   text-transform: none;
 }
-/* line 214, ../sass/_base.scss */
+/* line 218, ../sass/_base.scss */
 body .navbar-footer .bottom-bar ul li:first-of-type > a {
   padding-left: 0;
 }
-/* line 219, ../sass/_base.scss */
+/* line 223, ../sass/_base.scss */
 body .purple {
   color: #60297C;
 }
-/* line 222, ../sass/_base.scss */
+/* line 226, ../sass/_base.scss */
 body .pink {
   color: #EB1979;
 }
-/* line 225, ../sass/_base.scss */
+/* line 229, ../sass/_base.scss */
 body .light-blue {
   color: #25AAE1;
 }
-/* line 228, ../sass/_base.scss */
+/* line 232, ../sass/_base.scss */
 body .fern {
   color: #62BD83;
 }
-/* line 231, ../sass/_base.scss */
+/* line 235, ../sass/_base.scss */
 body .green {
   color: #22AE50;
 }
-/* line 237, ../sass/_base.scss */
+/* line 241, ../sass/_base.scss */
 body #myModal .modal-header {
   border-bottom: none;
 }
-/* line 240, ../sass/_base.scss */
+/* line 244, ../sass/_base.scss */
 body #myModal .btn-wide {
   padding: 6px 24px;
 }
-/* line 243, ../sass/_base.scss */
+/* line 247, ../sass/_base.scss */
 body #myModal .modal-title {
   text-transform: uppercase;
 }
-/* line 246, ../sass/_base.scss */
+/* line 250, ../sass/_base.scss */
 body #myModal .modal-content {
   padding: 24px;
   border-radius: 0;
 }
-/* line 251, ../sass/_base.scss */
+/* line 255, ../sass/_base.scss */
 body #myModal input {
   margin: 24px 0;
 }
-/* line 256, ../sass/_base.scss */
+/* line 260, ../sass/_base.scss */
 body .circles {
   margin: 0px auto;
 }
-/* line 259, ../sass/_base.scss */
+/* line 263, ../sass/_base.scss */
 body .circles > div {
   overflow: hidden;
   float: left;
@@ -310,7 +314,7 @@ body .circles > div {
   -khtml-border-radius: 50%;
   background: #eee;
 }
-/* line 272, ../sass/_base.scss */
+/* line 276, ../sass/_base.scss */
 body .circles > div > div {
   position: absolute;
   top: 0;
@@ -318,36 +322,36 @@ body .circles > div > div {
   bottom: 0;
   left: 0;
 }
-/* line 279, ../sass/_base.scss */
+/* line 283, ../sass/_base.scss */
 body .circles > div > div > div {
   display: table;
   width: 100%;
   height: 100%;
 }
-/* line 284, ../sass/_base.scss */
+/* line 288, ../sass/_base.scss */
 body .circles > div > div > div > div {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 @media (max-width: 320px) {
-  /* line 292, ../sass/_base.scss */
+  /* line 296, ../sass/_base.scss */
   body .circles > div {
     padding: 50%;
   }
 }
 @media (min-width: 321px) and (max-width: 800px) {
-  /* line 297, ../sass/_base.scss */
+  /* line 301, ../sass/_base.scss */
   body .circles > div {
     padding: 25%;
   }
 }
 @media (min-width: 801px) {
-  /* line 302, ../sass/_base.scss */
+  /* line 306, ../sass/_base.scss */
   body .circles {
     width: 800px;
   }
-  /* line 303, ../sass/_base.scss */
+  /* line 307, ../sass/_base.scss */
   body .circles > div {
     padding: 12.5%;
   }
@@ -368,6 +372,45 @@ body a#indiegogo {
 /* line 12, ../sass/_index.scss */
 body a#indiegogo :hover {
   color: #268db5;
+}
+/* line 18, ../sass/_index.scss */
+body #myModal h2 {
+  font-family: "Open Sans Condensed";
+  font-weight: bold;
+  text-transform: uppercase;
+}
+/* line 22, ../sass/_index.scss */
+body #myModal h2 span {
+  color: #60297C;
+}
+/* line 27, ../sass/_index.scss */
+body #myModal button {
+  color: white;
+  text-transform: uppercase;
+}
+/* line 32, ../sass/_index.scss */
+body #myModal input {
+  background: #eee;
+  border: none;
+}
+/* line 37, ../sass/_index.scss */
+body #myModal .btn.btn-wide {
+  padding: 6px 48px;
+}
+/* line 41, ../sass/_index.scss */
+body #myModal button:hover {
+  color: white;
+}
+/* line 47, ../sass/_index.scss */
+body #videoModal .modal-body {
+  padding: 0;
+}
+@media (min-width: 768px) {
+  /* line 53, ../sass/_index.scss */
+  body .modal-dialog {
+    width: 562px;
+    margin: 30px auto;
+  }
 }
 
 /* line 3, ../sass/_build.scss */
