Fonts and synbiota styles are now all properly linked up.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -10,6 +10,10 @@ body {
         }
     }
 
+    .condensed {
+        font-family: $helvetica_neue_light_condensed;
+    }
+
     p.p-highlight {
         font-size: 30px;
         line-height: 1.25;
