--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -76,6 +76,12 @@ $navbar-brand-color: #3e3f41;
 $base-font:       'proxima', 'Helvetica', Sans-serif;
 $base-font-bold:  'proxima_bold', 'Helvetica', Sans-serif;
 $base-font-light:  'proxima_light', 'Helvetica', Sans-serif;
+$helvetica_neue_light_condensed: 'HelveticaNeueLTStd-LtCn';
+$helvetica_neue_bold_condensed: 'HelveticaNeueLTStd-BdCn';
+$helvetica_neue_bold: 'HelveticaNeueLTStd-Bd';
+$helvetica_neue_roman: 'HelveticaNeueLTStd-Roman';
+$helvetica_neue_condensed: 'HelveticaNeueLTStd-Cn';
+$helvetica_neue_thin_condensed: 'HelveticaNeueLT-ThinCond';
 
 // Footer
 $footer-background-color: #2d2d2d;
