--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+@import url("//hello.myfonts.net/count/2a1e3e");
+@import url("//hello.myfonts.net/count/2a2ae4");
 /* line 9, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_normalize.scss */
 html {
   font-family: sans-serif;
@@ -8024,7 +8026,83 @@ button.close {
     display: none !important;
   }
 }
-/* line 6, ../sass/main.scss */
+@font-face {
+  font-family: 'proxima';
+  src: url("../fonts/proximanova-regular-webfont.eot");
+  src: url("../fonts/proximanova-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova-regular-webfont.woff") format("woff"), url("../fonts/proximanova-regular-webfont.ttf") format("truetype"), url("../fonts/proximanova-regular-webfont.svg#proxima_nova_rgregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'proxima_bold';
+  src: url("../fonts/proximanova-semibold-webfont.eot");
+  src: url("../fonts/proximanova-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova-semibold-webfont.woff") format("woff"), url("../fonts/proximanova-semibold-webfont.ttf") format("truetype"), url("../fonts/proximanova-semibold-webfont.svg#proxima_novasemibold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'proxima_light';
+  src: url("../fonts/proximanova-light-webfont.eot");
+  src: url("../fonts/proximanova-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova-light-webfont.woff") format("woff"), url("../fonts/proximanova-light-webfont.ttf") format("truetype"), url("../fonts/proximanova-light-webfont.svg#ProximaNova-Light") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/**
+ * @license
+ * MyFonts Webfont Build ID 2760254, 2014-03-03T15:23:09-0500
+ * 
+ * The fonts listed in this notice are subject to the End User License
+ * Agreement(s) entered into by the website owner. All other parties are 
+ * explicitly restricted from using the Licensed Webfonts(s).
+ * 
+ * You may obtain a valid license at the URLs below.
+ * 
+ * Webfont: Helvetica 47 Cond Light by Linotype
+ * URL: http://www.myfonts.com/fonts/linotype/neue-helvetica/helvetica-47-light-condensed/
+ * 
+ * Webfont: Helvetica 77 Cond Bold by Linotype
+ * URL: http://www.myfonts.com/fonts/linotype/neue-helvetica/helvetica-77-bold-condensed/
+ * 
+ * 
+ * License: http://www.myfonts.com/viewlicense?type=web&buildid=2760254
+ * Licensed pageviews: 250,000
+ * Webfonts copyright: Copyright &#x00A9; 1990, 2002 Adobe Systems Incorporated.  All Rights Reserved. &#x00A9; 1981, 2002 Heidelberger Druckmaschinen AG. All rights reserved.
+ * 
+ * © 2014 MyFonts Inc
+*/
+/* @import must be at top of file, otherwise CSS will not work */
+@font-face {
+  font-family: 'HelveticaNeueLTStd-LtCn';
+  src: url("../fonts/2A1E3E_0_0.eot");
+  src: url("../fonts/2A1E3E_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2A1E3E_0_0.woff") format("woff"), url("../fonts/2A1E3E_0_0.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'HelveticaNeueLTStd-BdCn';
+  src: url("../fonts/2A1E3E_1_0.eot");
+  src: url("../fonts/2A1E3E_1_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2A1E3E_1_0.woff") format("woff"), url("../fonts/2A1E3E_1_0.ttf") format("truetype");
+}
+/* @import must be at top of file, otherwise CSS will not work */
+@font-face {
+  font-family: 'HelveticaNeueLTStd-Bd';
+  src: url("../fonts/2A2AE4_0_0.eot");
+  src: url("../fonts/2A2AE4_0_0.eot?font#iefix") format("embedded-opentype"), url("../fonts/2A2AE4_0_0.woff") format("woff"), url("../fonts/2A2AE4_0_0.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'HelveticaNeueLTStd-Roman';
+  src: url("../fonts/2A2AE4_1_0.eot");
+  src: url("../fonts/2A2AE4_1_0.eot?font#iefix") format("embedded-opentype"), url("../fonts/2A2AE4_1_0.woff") format("woff"), url("../fonts/2A2AE4_1_0.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'HelveticaNeueLTStd-Cn';
+  src: url("../fonts/2A2AE4_2_0.eot");
+  src: url("../fonts/2A2AE4_2_0.eot?font#iefix") format("embedded-opentype"), url("../fonts/2A2AE4_2_0.woff") format("woff"), url("../fonts/2A2AE4_2_0.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'HelveticaNeueLT-ThinCond';
+  src: url("../fonts/2A2AE4_3_0.eot");
+  src: url("../fonts/2A2AE4_3_0.eot?font#iefix") format("embedded-opentype"), url("../fonts/2A2AE4_3_0.woff") format("woff"), url("../fonts/2A2AE4_3_0.ttf") format("truetype");
+}
+/* line 10, ../sass/main.scss */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -8033,14 +8111,15 @@ button.close {
 }
 
 /* Space out content a bit */
-/* line 14, ../sass/main.scss */
+/* line 18, ../sass/main.scss */
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: "proxima", "Helvetica", Sans-serif;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-/* line 20, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 .header,
 .marketing,
 .footer {
@@ -8049,12 +8128,12 @@ body {
 }
 
 /* Custom page header */
-/* line 28, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 .header {
   border-bottom: 1px solid #e5e5e5;
   /* Make the masthead heading the same height as the navigation */
 }
-/* line 32, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
@@ -8063,49 +8142,49 @@ body {
 }
 
 /* Custom page footer */
-/* line 41, ../sass/main.scss */
+/* line 46, ../sass/main.scss */
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
 
-/* line 47, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 .container-narrow > hr {
   margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
-/* line 52, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 }
-/* line 55, ../sass/main.scss */
+/* line 60, ../sass/main.scss */
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
 }
 
 /* Supporting marketing content */
-/* line 62, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
 .marketing {
   margin: 40px 0;
 }
-/* line 64, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
 .marketing p + h4 {
   margin-top: 28px;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  /* line 71, ../sass/main.scss */
+  /* line 76, ../sass/main.scss */
   .container {
     max-width: 730px;
   }
 
   /* Remove the padding we set earlier */
-  /* line 76, ../sass/main.scss */
+  /* line 81, ../sass/main.scss */
   .header,
   .marketing,
   .footer {
@@ -8114,13 +8193,13 @@ body {
   }
 
   /* Space out the masthead */
-  /* line 84, ../sass/main.scss */
+  /* line 89, ../sass/main.scss */
   .header {
     margin-bottom: 30px;
   }
 
   /* Remove the bottom border on the jumbotron for visual effect */
-  /* line 89, ../sass/main.scss */
+  /* line 94, ../sass/main.scss */
   .jumbotron {
     border-bottom: 0;
   }
