Exposing indiegogo on small screens

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -20,6 +20,13 @@ body {
     	:hover {
     	color: $ui-blue-dark;
         }
+        h3 {    
+            font-weight: bold;
+        }
+    }
+    
+    .sm-indiegogo {
+        margin-top: 40px;
     }
     
     #indexTout {
